fix hiding collapse button

--- a/src/components/RankingList/RankingList.module.scss
+++ b/src/components/RankingList/RankingList.module.scss
@@ -112,7 +112,7 @@ $recent-date-index: 10;
 .collapse {
   @media (min-width: 1200px) {
     // Hide at the largest breakpoint
-    display: none;
+    display: none !important;
   }
 }
 
